--- a/src/components/ui/button/Button.scss
+++ b/src/components/ui/button/Button.scss
@@ -67,7 +67,7 @@
   &.btn--lang {
     width: 100%;
     padding: 8px 14px;
-    border-radius: 0px 8px 0px 8px;
+    border-radius: 8px 8px 8px 8px;
     background: rgba(30, 30, 30, 0.8);
     color: #fbe8a6;
     font-weight: 500;
@@ -82,7 +82,7 @@
 
     &.active {
       background: linear-gradient(155deg, #b0934a, #494330);
-      color: #1c1c1c;
+      color: #222121;
       box-shadow: inset 0 2px 6px rgba(212, 175, 55, 0.5);
     }
   }
