--- a/src/pages/home/Home.scss
+++ b/src/pages/home/Home.scss
@@ -6,7 +6,7 @@
   margin-top: 150px;
 
   &_subtext {
-    padding: 16px;
+    margin-top: 20px;
     max-width: 720px;
     text-align: center;
     font-size: 0.95rem;
@@ -122,10 +122,6 @@
 @media (max-width: 768px) {
   .Home {
     padding: 20px 0;
-
-    &_title {
-      font-size: 1.4rem;
-    }
 
     &_subtext {
       font-size: 0.9rem;
