--- a/src/components/ui/button/Button.scss
+++ b/src/components/ui/button/Button.scss
@@ -66,13 +66,13 @@
   /* ============================= */
   &.btn--lang {
     width: 100%;
-    padding: 8px 14px;
-    border-radius: 8px 8px 8px 8px;
-    background: rgba(30, 30, 30, 0.8);
+    padding: 6px 12px;
+    border-radius: 8px;
+    background: rgba(46, 44, 44, 0.8);
     color: #fbe8a6;
     font-weight: 500;
     text-align: left;
-    box-shadow: 0 1px 2px rgba(212, 175, 55, 0.35);
+    box-shadow: 1px 1px 1px rgba(212, 175, 55, 0.35);
     transition: all 0.3s ease;
 
     &:hover {
