--- a/src/pages/About/About.scss
+++ b/src/pages/About/About.scss
@@ -4,7 +4,7 @@
   justify-content: flex-start;
   align-items: flex-start;
   padding: 16px;
-  margin-top: 130px;
+  margin-top: 140px;
   margin-bottom: 40px;
   font-family: monospace;
   gap: 18px;
@@ -14,10 +14,10 @@
 .AboutContainer {
   user-select: none;
   flex: 1;
-  max-width: 800px;
+  max-width: 750px;
   display: flex;
   flex-direction: column;
-  padding: 30px 36px;
+  padding: 30px;
   background: linear-gradient(155deg, #141313, #3e392d);
   border-left: 3px solid rgba(212, 175, 55, 0.6);
   border-radius: 12px;
@@ -41,7 +41,7 @@
 .AboutGlobeContainer {
   position: relative;
   width: 100%;
-  max-width: 360px;
+  max-width: 320px;
   aspect-ratio: 1 / 1;
   border-radius: 50%;
   overflow: hidden;
@@ -59,12 +59,10 @@
   max-width: 200px;
   display: flex;
   justify-content: center;
-  margin-bottom: 16px;
-  margin-left: 16px;
 }
 
 .AboutImage {
-  width: 250px;
+  width: 200px;
   border-radius: 4%;
   border: 1px solid #d4af37;
   opacity: 0;
@@ -90,20 +88,17 @@
 /* Кнопка выбора языка */
 .AboutLang {
   position: absolute;
-  top: 16px;
+  top: 20px;
   right: 16px;
   z-index: 5;
   display: inline-block;
 }
 
 .AboutLang_current {
-  border: none;
-  background: none;
-  cursor: pointer;
   color: #d4af37;
   font-weight: 500;
   white-space: nowrap;
-  padding: 4px 6px;
+  padding: 2px 3px;
   transition: color 0.3s ease;
 }
 
@@ -119,15 +114,12 @@
   display: flex;
   flex-direction: column;
   gap: 1px;
-  background: rgba(25, 24, 24, 0.96);
   box-shadow: 0 2px 6px rgba(42, 41, 16, 0.6);
   z-index: 10;
 }
 
 .AboutLang_item {
   width: 100%;
-  background: none;
-  border: none;
   cursor: pointer;
   padding: 6px 8px;
   text-align: center;
@@ -139,7 +131,7 @@
 
 .AboutLang_item:hover {
   color: #fff;
-  background: rgba(212, 175, 55, 0.08);
+  background: rgba(226, 185, 52, 0.08);
 }
 
 .AboutLang_item.active {
@@ -153,8 +145,9 @@
 }
 
 .AboutTitle {
-  margin-bottom: 16px;
+  margin-bottom: 14px;
   color: #fbe8a6;
+  font-size: 1.2rem;
 }
 
 .AboutText {
